Working on the alignment issue

--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -294,14 +294,12 @@
     gap: 1rem;
     padding: 1rem 0;
     border-radius: 5px;
-    width: 100%;
-    margin-top: 20px;
-
+    width: 116px;
 }
 
 .popup-notify-list p {
     font-family: 'Poppins', sans-serif;
-    font-size: 14px;
+    font-size: 0.8rem;
     padding: 0.4rem 0;
     border-radius: 4px;
     margin: 0 3px;
@@ -310,7 +308,6 @@
     height: 35px;
     display: flex;
     align-items: center;
-    text-align: center;
 }
 
 .popup-notify-list p:hover {
